--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,11 +25,11 @@ jobs:
           key: ${{ secrets.REMOTE_PRIVATE_KEY }} # ec2 instance pem key
           port: ${{ secrets.REMOTE_SSH_PORT }} # 접속포트
           script: | # 실행할 스크립트
-            cd /srv/portfolio_with_django/
+            cd ~/venvs/portfolio/bin
+            . activate
+            cd ~/projects/portfolio_with_django
             git reset --hard
             git pull
-            pkill -f "python3 manage.py runserver"
-            nohup python3 manage.py runserver 0:8443 --insecure &
   # build:
 
   #   runs-on: ubuntu-22.04
