gunicorn 실행로직 수정

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,7 +31,7 @@ jobs:
             git reset --hard
             git pull
             pkill -9 gunicorn
-            nohup gunicorn --bind 0:8443 config.wsgi:application
+            nohup gunicorn --bind 0:8443 config.wsgi:application &
   # build:
 
   #   runs-on: ubuntu-22.04
