--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,9 +25,7 @@ jobs:
           key: ${{ secrets.REMOTE_PRIVATE_KEY }} # ec2 instance pem key
           port: ${{ secrets.REMOTE_SSH_PORT }} # 접속포트
           script: | # 실행할 스크립트
-            cd ~/venvs/portfolio/bin
-            . activate
-            cd ~/projects/portfolio_with_django
+            cd ~/portfolio_with_django
             git reset --hard
             git pull
   # build:
