--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 annotated-types==0.7.0
-anyio==4.9.0
-asgiref==3.7.2
-certifi==2025.4.26
+anyio==4.10.0
+asgiref==3.9.1
+certifi==2025.8.3
 distro==1.9.0
-Django==5.0.1
-django-cors-headers==4.4.0
+Django==4.2.24
+django-cors-headers==4.7.0
+exceptiongroup==1.3.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+importlib_metadata==8.7.0
 jiter==0.10.0
-Markdown==3.5.2
-openai==1.86.0
-pillow==11.2.1
-pydantic==2.11.6
+Markdown==3.9
+openai==1.106.1
+pillow==11.3.0
+pydantic==2.11.7
 pydantic_core==2.33.2
-setuptools==68.2.2
 sniffio==1.3.1
-sqlparse==0.4.4
+sqlparse==0.5.3
 tqdm==4.67.1
 typing-inspection==0.4.1
-typing_extensions==4.14.0
-tzdata==2023.4
-wheel==0.41.2
+typing_extensions==4.15.0
+zipp==3.23.0
