--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ distro==1.9.0
 Django==4.2.24
 django-cors-headers==4.7.0
 exceptiongroup==1.3.0
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -14,6 +15,7 @@ importlib_metadata==8.7.0
 jiter==0.10.0
 Markdown==3.9
 openai==1.106.1
+packaging==25.0
 pillow==11.3.0
 pydantic==2.11.7
 pydantic_core==2.33.2
