접속 로그 파일 조회 전환 및 운영 문서 업데이트

--- a/nginx/nginx.autorun.conf
+++ b/nginx/nginx.autorun.conf
@@ -11,7 +11,30 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
-    access_log  /opt/homebrew/var/log/nginx/access.log;
+    map $http_cf_connecting_ip $client_ip {
+        default $http_cf_connecting_ip;
+        ""      $remote_addr;
+    }
+
+    log_format access_json escape=json '{'
+        '"logged_at":"$time_iso8601",'
+        '"request_id":"$request_id",'
+        '"client_ip":"$client_ip",'
+        '"x_forwarded_for":"$http_x_forwarded_for",'
+        '"method":"$request_method",'
+        '"path":"$uri",'
+        '"query":"$args",'
+        '"status":$status,'
+        '"request_time_s":$request_time,'
+        '"upstream_time_s":"$upstream_response_time",'
+        '"bytes_sent":$body_bytes_sent,'
+        '"host":"$host",'
+        '"scheme":"$scheme",'
+        '"user_agent":"$http_user_agent",'
+        '"referer":"$http_referer"'
+    '}';
+
+    access_log  /opt/homebrew/var/log/nginx/access_json.log access_json;
     error_log   /opt/homebrew/var/log/nginx/error.log;
 
     server {
