포트폴리오 업데이트 반영 (docker 제외)

--- a/nginx/nginx.autorun.conf
+++ b/nginx/nginx.autorun.conf
@@ -10,6 +10,19 @@ http {
 
     sendfile        on;
     keepalive_timeout  65;
+    gzip on;
+    gzip_comp_level 5;
+    gzip_min_length 1024;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_types
+        text/plain
+        text/css
+        text/javascript
+        application/javascript
+        application/json
+        application/xml
+        image/svg+xml;
 
     map $http_cf_connecting_ip $client_ip {
         default $http_cf_connecting_ip;
@@ -47,7 +60,7 @@ http {
             alias /Users/imhanbyeol/Development/portfolio_with_django/staticfiles/;
             access_log off;
             expires 30d;
-            add_header Cache-Control "public, max-age=2592000";
+            add_header Cache-Control "public, max-age=2592000, s-maxage=2592000, immutable";
         }
 
         location /media/ {
