--- a/nginx/portfolio.conf
+++ b/nginx/portfolio.conf
@@ -3,12 +3,25 @@ server {
     server_name www.hanplanet.com hanplanet.com 112.187.212.49 localhost;
 
     client_max_body_size 20m;
+    gzip on;
+    gzip_comp_level 5;
+    gzip_min_length 1024;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_types
+        text/plain
+        text/css
+        text/javascript
+        application/javascript
+        application/json
+        application/xml
+        image/svg+xml;
 
     location /static/ {
         alias /Users/imhanbyeol/Development/portfolio_with_django/staticfiles/;
         access_log off;
         expires 30d;
-        add_header Cache-Control "public, max-age=2592000";
+        add_header Cache-Control "public, max-age=2592000, s-maxage=2592000, immutable";
     }
 
     location /media/ {
