--- a/.gitignore
+++ b/.gitignore
@@ -39,10 +39,13 @@ env/
 
 # Environment variables
 .env
+.env.docker
 
 # Local secrets
 config/secrets.json
 config/local_settings.py
+docker/cloudflared/config.yml
+docker/cloudflared/*.json
 
 # OS
 .DS_Store
